# tiet-unc512.github.io

./: 404.html  BingSiteAuth.xml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
assets/theme-overrides/: main.html
docs/intro-to-ar/: scribe.md  scribe.org  scribe.tex
docs/intro-to-ar/assets/: bipartite-graph.pdf_tex  slam_graph.dot  slam_graph_2.tex  slam_graph_3.tex
docs/the-geometric-model/: exercise.md  exercise.org  exercise.tex  index.md  index.org  index.tex  scribe.md  scribe.org
intro-to-ar/assets/: slam_graph.tex
intro-to-ar/scribe/: index.html
search/: search_index.json
the-geometric-model/: index.html  index.org  scribe.tex
the-geometric-model/exercise/: index.html
the-geometric-model/images/: RationalBezier2D.pdf_tex
the-geometric-model/scribe/: index.html
